fixed overflow of image in intro

--- a/src/sass/components/_components.intro.scss
+++ b/src/sass/components/_components.intro.scss
@@ -25,6 +25,10 @@ INTRO
     background-size: cover;
     background-position-x: right;
     background-position-y: 50%;
+    @include respond-to(1288px) {
+      width: 100%;
+      margin-left: 0;
+    }
     @include respond-to(960px) {
       background: none;
       margin: 0;
